--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ $(window).load(function() {
               <!-- #main-container -->
 		<ul data-role="listview">
 			<li><a href="index1.html" target="_blank">QUEM SOMOS</a></li>
-			<li><a href="#" onclick="window.open('http://www.scortecci.com.br/catalogo/catalogo.php', '_system');">CATÁLOGO DE PUBLICAÇÕES</a></li>
+			<li><a href="#" onclick="window.open('http://www.asabeca.com.br/', '_system');">CATÁLOGO DE PUBLICAÇÕES</a></li>
             <li><a href="#" onclick="window.open('http://www.scortecci.com.br/formulario.php?id=304', '_system');">FALE COM A PESSOA CERTA</a></li>
             <li><a href="#" onclick="window.open('http://www.scortecci.com.br/formulario.php?id=226', '_system');">FAÇA UM ORÇAMENTO</a></li>
 	  </ul>		
@@ -151,15 +151,11 @@ $(window).load(function() {
 	</div>
 	<div data-role="content">	
 <img src="images/scortecci.jpg" width="320"alt=""/>
-<h3>Scortecci: Uma História de 32 anos!</h3>
- 
-<p>A Scortecci nasceu em agosto de 1982, uma sexta-feira 13, na Galeria Pinheiros, loja 13, na Rua Teodoro Sampaio, 1704, em São Paulo, Capital.</p>
- 
-<p>Edita, imprime e comercializa livros em pequenas tiragens.</p>
- 
-<p>Em sua história, conserva os mesmos objetivos e propósitos desde a sua fundação: publicar livros, promover concursos e prêmios literários, realizar recitais e eventos culturais, organizar antologias, incentivar o hábito da leitura, difundir a cultura e o conhecimento através de cursos, palestras e oficinas literárias.</p>
- 
-<p>Fazem parte do Grupo Editorial Scortecci: Scortecci Editora, Fábrica de Livros, Pingo de Letra (infantil), Gráfica Scortecci, Espaço Scortecci, TV Livro, Escola do Escritor, Livraria Asabeça e os portais na internet Amigos do Livro, Escritor e Concursos e Prêmios Literários.</p></div>
+<p><strong>QUEM SOMOS</strong><br>
+  <br>
+  A <strong>Scortecci</strong> é uma editora laureada, com mais de <strong>33 anos</strong> no mercado editorial brasileiro. Edita, imprime e comercializa livros em pequenas tiragens desde 1982. Possui quatro selos editoriais: Scortecci, Fábrica de Livros, REBRA / Scortecci e Pingo de Letra (Infantil). Já ganhou os prêmios: Jabuti, APCA, FBN e ABL.  Possui gráfica própria com tecnologia Digital e sofisticado controle de vendas e logística com acesso através da internet. São mais de sete mil e quinhentos títulos publicados em primeira edição e mais de oito milhões de exemplares. <br>
+  Em sua história conserva os mesmos objetivos e propósitos desde a sua fundação: publicar livros, organizar concursos e prêmios literários (Prêmio Literário Livraria Asabeça, Prêmio Canon de Poesia e Prêmio Amigos do Livro), realizar recitais e eventos culturais, organizar antologias, promover o conhecimento através de cursos e palestras (Escola do Escritor) e fomentar o mundo literário e cultural.<u></u><u></u></p>
+<h3>&nbsp;</h3></div>
 	<div data-role="footer" data-theme="b" data-position="fixed">
 	<div data-role="navbar">
 		<ul>
