--- a/www/index.html
+++ b/www/index.html
@@ -102,7 +102,7 @@ $(window).load(function() {
 			            <li> <a href="http://www.scortecci.com.br"><img src="images/EDITORA.jpg" width="480" /></a> </li>
 			            <li> <a href="http://www.escoladoescritor.com.br"><img src="images/ESCOLA.jpg" width="480" /></a> </li>
 			            <li> <a href="http://www.graficascortecci.com.br"><img src="images/GRAFICA.jpg" width="480" /></a> </li>
-			            <li> <a href="http://www.fabicradelivros.com.br"><img src="images/LIVROS.jpg" width="480" /></a> </li>
+			            <li> <a href="http://www.fabricadelivros.com.br"><img src="images/LIVROS.jpg" width="480" /></a> </li>
 			            <li> <a href="http://www.pingodeletra.com.br"><img src="images/PINGO.jpg" width="480" /></a> </li>
 			            <li> <a href="http://www.portaldoescritor.com.br"><img src="images/PORTAL.jpg" width="480" /></a> </li>
 			            <li> <a href="http://portaldoescritorscortecci.blogspot.com.br/"><img src="images/Blogdoescritor.jpg" width="480" /></a> </li>
@@ -131,7 +131,6 @@ $(window).load(function() {
 		<ul data-role="listview">
 			<li><a href="index1.html" target="_parent">QUEM SOMOS</a></li>
 			<li><a href="#" onclick="window.open('http://www.asabeca.com.br/', '_system');">LIVRARIA ASABEÇA</a></li>
-            <li><a href="http://www.asabeca.com.br/" target="new" onclick="window.open('http://www.scortecci.com.br/formulario.php?id=304', '_system');">FALE CONOSCO</a></li>
 	  </ul>		
 	</div>
 	<div data-role="footer" data-theme="b" data-position="fixed">
